fixed scrollbar mounting in thumbnails and added padding bottom

--- a/src/app/layout-editor/left-panel/left-panel.component.scss
+++ b/src/app/layout-editor/left-panel/left-panel.component.scss
@@ -91,10 +91,9 @@
   display: flex;
   flex-direction: column;
   gap: var(--spacing-x4);
-  padding: var(--spacing-x4);
-  padding-top: var(--spacing-x5);
+  padding: var(--spacing-x5) var(--spacing-x4);
   width: 100%;
-  height: 100%;
+  // height: 100%;
   // overflow-y: hidden;
 }
 
@@ -102,7 +101,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100px;
+  height: 100px;
   width: 100%;
   background-color: var(--bg-bright);
   border: 1px solid var(--border-color);
